--- a/get-programming-with-haskell.cabal
+++ b/get-programming-with-haskell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 180c8e4bd7cabd27b01f1010749d66b5cb4b7a699f61df508a1b8d9ca75fc2b3
+-- hash: ed248eaef19b15c53893fe094adf1a93fa6db2257329133537e50487ed6b97af
 
 name:           get-programming-with-haskell
 version:        0.1.0.0
@@ -30,6 +30,7 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , containers
   default-language: Haskell2010
 
 executable get-programming-with-haskell-exe
@@ -41,6 +42,7 @@ executable get-programming-with-haskell-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , get-programming-with-haskell
   default-language: Haskell2010
 
@@ -54,5 +56,6 @@ test-suite get-programming-with-haskell-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , get-programming-with-haskell
   default-language: Haskell2010
