--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description: Please see the README on GitHub at <https://github.com/worm2fed/get
 dependencies:
   - base >= 4.7 && < 5
   - containers
+  - random
 
 library:
   source-dirs: src
