--- a/get-programming-with-haskell.cabal
+++ b/get-programming-with-haskell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 005fcd79e2191ea31626f9498c5fdc8314000e8668d485455d3f804fa2ad7910
+-- hash: 384a80b5225e97b57b2605a545c449803d7556f5fb2b92ccb5041f3ed0591026
 
 name:           get-programming-with-haskell
 version:        0.1.0.0
@@ -33,6 +33,7 @@ library
     , containers
     , random
     , split
+    , text
   default-language: Haskell2010
 
 executable get-programming-with-haskell-exe
@@ -48,6 +49,7 @@ executable get-programming-with-haskell-exe
     , get-programming-with-haskell
     , random
     , split
+    , text
   default-language: Haskell2010
 
 test-suite get-programming-with-haskell-test
@@ -64,4 +66,5 @@ test-suite get-programming-with-haskell-test
     , get-programming-with-haskell
     , random
     , split
+    , text
   default-language: Haskell2010
