lesson 34: organizing haskell code with modules

--- a/get-programming-with-haskell.cabal
+++ b/get-programming-with-haskell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 911b39a83162572964fafe9c8ff91fc07c73c587e52a7bc27c2139d08b870c0d
+-- hash: 3af76c58aca5bcbc7f7c8582ce7cb2a2ea2ca127e6f746f9921d1fe5e5e55a76
 
 name:           get-programming-with-haskell
 version:        0.1.0.0
@@ -24,6 +24,13 @@ source-repository head
   location: https://github.com/worm2fed/get-programming-with-haskell
 
 library
+  exposed-modules:
+      Unit4.Lesson25.Glitch
+      Unit4.Lesson25.Lesson25
+      Unit4.Lesson25.Main
+      Unit6.Lesson34.Lesson34
+      Unit6.Lesson34.Main
+      Unit6.Lesson34.Palindrome
   other-modules:
       Paths_get_programming_with_haskell
   hs-source-dirs:
